test/errors/assert/table.yasl

let x = {
    .f: fn() {
        assert false
    },
    .g: fn() {
        echo false
    } }

mt.set(x, x)

x->f()
